--- a/JCampingFix/JCampingFix.csproj
+++ b/JCampingFix/JCampingFix.csproj
@@ -47,12 +47,6 @@
     <Compile Include="BinarySerialization\BinarySerialization.cs" />
     <Compile Include="Controller\CabinList.cs" />
     <Compile Include="Controller\CustomerList.cs" />
-    <Compile Include="MainMenu.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainMenu.Designer.cs">
-      <DependentUpon>MainMenu.cs</DependentUpon>
-    </Compile>
     <Compile Include="Model\Cabin.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Program.cs" />
@@ -76,9 +70,12 @@
     <Compile Include="View\LedigaStugor.Designer.cs">
       <DependentUpon>LedigaStugor.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="MainMenu.resx">
+    <Compile Include="View\MainMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
-    </EmbeddedResource>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -88,6 +85,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\MainMenu.resx">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="bin\Debug\CabinLista.DAT" />
+    <None Include="bin\Debug\MemberLista.DAT" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
